@@ -1,18 +1,7 @@
 log4j.rootCategory=info, stdout
 
-
 # Custom appender for logging most important messages only
-log4j.logger.core=INFO, core
-log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.core.Threshold=INFO
-log4j.appender.core.File=logs/core.log
-log4j.appender.core.layout=org.apache.log4j.PatternLayout
-log4j.appender.core.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.core.DatePattern='.'yyyy-MM-dd
-log4j.appender.core.Append=true
-
-# Custom appender for logging most important messages only
-log4j.logger.status=INFO, status
+log4j.logger.status=INFO, status, summary
 log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status.Threshold=INFO
 log4j.appender.status.File=logs/status.log
@@ -21,6 +10,12 @@ log4j.appender.status.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.status.DatePattern='.'yyyy-MM-dd
 log4j.appender.status.Append=false
 
+log4j.appender.summary=org.apache.log4j.FileAppender
+log4j.appender.summary.Threshold=INFO
+log4j.appender.summary.File=logs/summary.log
+log4j.appender.summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary.layout.ConversionPattern=%m%n
+log4j.appender.summary.Append=false
 
 # Standard output appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
